fix: overlay issue in Chrome when o-header__primary has no visible elements

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -47,6 +47,13 @@
 .o-header__primary {
 	display: table-row-group;
 
+	&:after {
+		@media (max-width: $o-header-grid-float-breakpoint-max) {
+			content: '';
+			margin-left: -10000px;
+		}
+	}
+
 	@media (min-width: $o-header-grid-float-breakpoint) {
 		display: block;
 		float: left;
